--- a/config.env
+++ b/config.env
@@ -9,10 +9,10 @@ ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
 # Clang
-## Custom
-USE_CUSTOM_CLANG=true
-CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
-CUSTOM_CLANG_BRANCH=master
+
+USE_CUSTOM_CLANG=false  
+CUSTOM_CLANG_SOURCE=
+CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-android- CROSS_COMPILE_ARM32=arm-linux-androideabi- LD=ld.lld AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump READELF=llvm-readelf OBJSIZE=llvm-size STRIP=llvm-strip LDGOLD=aarch64-linux-gnu-ld.gold LLVM_AR=llvm-ar LLVM_DIS=llvm-dis
