--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-android- CROSS_COMPILE_ARM32=arm-linux-androideabi- LD=ld.lld AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump READELF=llvm-readelf OBJSIZE=llvm-size STRIP=llvm-strip LDGOLD=aarch64-linux-gnu-ld.gold LLVM_AR=llvm-ar LLVM_DIS=llvm-dis
 
 ## AOSP
-CLANG_BRANCH=android11-release         #master-kernel-build-2022  
+CLANG_BRANCH=Android R release        #master-kernel-build-2022  
 CLANG_VERSION=r383902b            #r450784d   
 
 # GCC
