--- a/config.env
+++ b/config.env
@@ -173,7 +173,7 @@ ELECTRON_CLANG_VERSION=17.06
 ENABLE_NETHUNTER=false
 #另一个，问题有点多。追求极客，可搞下，build-geek_kernel.yml.bak。
 ENABLE_KALI=true
-KERNEL_VERSION=4.19 
+KERNEL_VERSION=4.14 
 ENABLE_WIREGUARD=false
 
 #（11）还有一些固定配置，未列出的编译器，总之一句话，够用了，此编译器集足够编译2018年到现在的所有的内核版本，当然一些细节需要自己处理，自行研究吧。
@@ -215,7 +215,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 #ENABLE_KERNELSU=false
-#KERNELSU_TAG=main
+KERNELSU_TAG=0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
