--- a/config.env
+++ b/config.env
@@ -215,7 +215,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 #ENABLE_KERNELSU=false
-KERNELSU_TAG=0.9.5
+KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
